--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
     "draft-js": "^0.11.7",
+    "framer-motion": "^12.10.5",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
