--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.2.2",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "draft-js": "^0.11.7",
     "framer-motion": "^12.10.5",
     "lucide-react": "^0.503.0",
